Updated index.html with social media account URL

--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-"www.linkedin.com/in/jmc39"
+<a href = "https://www.linkedin.com/in/jmc39">linkedin.com/in/jmc39</a> 
+<a href = "https://www.sandiego.gov/pad/about/staff/carter">sandiego.gov/pad/about/staff/carter</a>
+<a href = "https://www.facebook.com/jmc39">facebook.com/jmc39</a>
