--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<a href = "https://www.linkedin.com/in/jmc39">linkedin.com/in/jmc39</a> 
-<a href = "https://www.sandiego.gov/pad/about/staff/carter">sandiego.gov/pad/about/staff/carter</a>
+<a href = "https://www.linkedin.com/in/jmc39">linkedin.com/in/jmc39</a> <br>
+<a href = "https://www.sandiego.gov/pad/about/staff/carter">sandiego.gov/pad/about/staff/carter</a> <br>
 <a href = "https://www.facebook.com/jmc39">facebook.com/jmc39</a>
