--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-<a href = "https://www.linkedin.com/in/jmc39">linkedin.com/in/jmc39</a> <br/>
-<a href = "https://www.sandiego.gov/pad/about/staff/carter">sandiego.gov/pad/about/staff/carter</a> <br/>
+<center>
+<a href = "https://www.linkedin.com/in/jmc39/" alt=linkedin.com/in/jmc39><img src="github.com.io logo.pptx.jpg" alt="jmc39 seahorse dandelion"> </a> <br/>
+</center>
