Update to jmc39 github.io

--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html lang="en-us">
+<body>
 <center>
-<a href = "https://www.linkedin.com/in/jmc39/" alt=linkedin.com/in/jmc39><img src="github.com.io logo.pptx.jpg" alt="jmc39 seahorse dandelion"> </a> <br/>
+<a href = "Basic-HTML-Bio.html" alt=linkedin.com/in/jmc39><img src="black_octocat.jpg" alt="jmc39 seahorse dandelion" width=300></a>
+<a href = "https://www.linkedin.com/in/jmc39/" alt=linkedin.com/in/jmc39><img src="github.com.io logo.pptx.jpg" alt="jmc39 seahorse dandelion" width=400></a><br/>
 </center>
+</body>
+</html>
