--- a/index.html
+++ b/index.html
@@ -1,9 +1,43 @@
 <!DOCTYPE html>
 <html lang="en-us">
+<head>
+  <meta charset="UTF-8">
+  <title>Activity 1: James M. Carter</title>
+</head>
+
 <body>
-<center>
-<a href = "Basic-HTML-Bio.html" alt=linkedin.com/in/jmc39><img src="black_octocat.jpg" alt="jmc39 seahorse dandelion" width=300></a>
-<a href = "https://www.linkedin.com/in/jmc39/" alt=linkedin.com/in/jmc39><img src="github.com.io logo.pptx.jpg" alt="jmc39 seahorse dandelion" width=400></a><br/>
-</center>
+<h1>James M. Carter - jmc39</h1>
+<hr>
+  <img src="https://www.sandiego.gov/sites/default/files/jmcarter-circle.jpg" alt='James M. Carter'>
+  <p>James M. Carter is a Program Coordinator in the Performance & Analytics Department. His primary focus is promoting City efforts to use performance data to manage and improve service delivery.</p>
+  <p>Prior to coming to the City of San Diego, James served in management, budget, and policy positions at the local and federal levels of government. Most recently in Portland, OR, he played a lead role in the enhancement of the city’s performance management system. At the U.S. Department of Treasury, James contributed to the department’s data-driven, performance accountability program. Before that, he served as the health and human services program manager for the mayor in Washington, DC.</p>  
+  <p>James earned his undergraduate degree from Harvard University and obtained a Master of Science in Evidence-Based Social Intervention and Policy Evaluation from Oxford University (United Kingdom). Most importantly, he's overjoyed in his marriage and also blessed to be the proud father of two toddlers.</p>
+  <ul>
+  <li><b>Email:</b><a href="mailto:jamesmcarter@gmail.com?subject=UCSD DS&V bio page mail">jamesmcarter@gmail.com</a></li>  <li><b>LinkeIN:</b><a href="www.linkedin.com/in/jmc39">LinkedIN</a></li>
+  <li><b>GitHub IO:</b><a href="https://jmc39.github.io/">GitHub jmc39</a></li> 
+</ul>
+<table border="1">
+<tr>
+  <th>Books</th>
+  <th>Movies</th>
+  <th>Games</th>
+</tr>
+<tr>
+<td>Boys on the Boat</td>
+<td>Double Helix</td>
+<td>Fire Next Time</td>
+</tr>
+<tr>
+<td>Fight Club</td>
+<td>Coming to America</td>
+<td>Black Panther</td>
+</tr>
+<tr>
+<td>Legend of Zelda</td>
+<td>Dominoes</td>
+<td>Go Fish!</td>
+</tr>
+  
+</table>
 </body>
 </html>
