--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <ul>
   <li><b>Email:</b><a href="mailto:jamesmcarter@gmail.com?subject=UCSD DS&V bio page mail">jamesmcarter@gmail.com</a></li>  <li><b>LinkeIN:</b><a href="www.linkedin.com/in/jmc39">LinkedIN</a></li>
   <li><b>GitHub IO:</b><a href="https://jmc39.github.io/">GitHub jmc39</a></li> 
+  <li><b>LinkedIN:</b><a href="www.linkedin.com/in/jmc39">GitHub jmc39</a></li> 
 </ul>
 <table border="1">
 <tr>
