--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <p>Prior to coming to the City of San Diego, James served in management, budget, and policy positions at the local and federal levels of government. Most recently in Portland, OR, he played a lead role in the enhancement of the city’s performance management system. At the U.S. Department of Treasury, James contributed to the department’s data-driven, performance accountability program. Before that, he served as the health and human services program manager for the mayor in Washington, DC.</p>  
   <p>James earned his undergraduate degree from Harvard University and obtained a Master of Science in Evidence-Based Social Intervention and Policy Evaluation from Oxford University (United Kingdom). Most importantly, he's overjoyed in his marriage and also blessed to be the proud father of two toddlers.</p>
   <ul>
-  <li><b>Email:</b><a href="mailto:jamesmcarter@gmail.com?subject=UCSD DS&V bio page mail">jamesmcarter@gmail.com</a></li>  <li><b>LinkeIN:</b><a href="www.linkedin.com/in/jmc39">LinkedIN</a></li>
-  <li><b>GitHub IO:</b><a href="https://jmc39.github.io/">GitHub jmc39</a></li> 
-  <li><b>LinkedIN:</b><a href="www.linkedin.com/in/jmc39">GitHub jmc39</a></li> 
+  <li><b>Email:</b><a href="mailto:jamesmcarter@gmail.com?subject=UCSD DS&V bio page mail" target="_blank"> jamesmcarter@gmail.com</a></li>
+  <li><b>GitHub IO:</b><a href="https://jmc39.github.io/" target="_blank"> GitHub jmc39</a></li> 
+  <li><b>LinkedIN:</b><a href="http://www.linkedin.com/in/jmc39" target="_blank"> LinkedIN jmc39</a></li> 
 </ul>
 <table border="1">
 <tr>
