--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h1>James M. Carter - jmc39</h1>
 <hr>
   <img src="https://www.sandiego.gov/sites/default/files/jmcarter-circle.jpg" alt='James M. Carter'>
-  <p>James M. Carter is a Program Coordinator in the Performance & Analytics Department. His primary focus is promoting City efforts to use performance data to manage and improve service delivery.</p>
+  <p>James M. Carter is a Program Coordinator in the <a href="http://sandiego.gov/pad" target="_blank">City of San Diego Performance & Analytics Department.</a> His primary focus is promoting City efforts to use performance data to manage and improve service delivery.</p>
   <p>Prior to coming to the City of San Diego, James served in management, budget, and policy positions at the local and federal levels of government. Most recently in Portland, OR, he played a lead role in the enhancement of the city’s performance management system. At the U.S. Department of Treasury, James contributed to the department’s data-driven, performance accountability program. Before that, he served as the health and human services program manager for the mayor in Washington, DC.</p>  
   <p>James earned his undergraduate degree from Harvard University and obtained a Master of Science in Evidence-Based Social Intervention and Policy Evaluation from Oxford University (United Kingdom). Most importantly, he's overjoyed in his marriage and also blessed to be the proud father of two toddlers.</p>
   <ul>
