--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <p align=center>
 <a href = "Basic-HTML-Bio.html" alt="UCSD DS&V bio activity"><img src="dandelion39.jpg" alt="jmc39 seahorse dandelion" width=739></a>
-
+<a href = "ipynb_data/pothole_text.txt"></a>
 <!-- <a href = "https://www.linkedin.com/in/jmc39/" alt=linkedin.com/in/jmc39><img src="github.com.io logo.pptx.jpg" alt="jmc39 seahorse dandelion" width=400></a><br/> -->
 </p align=center>
 </body>
