--- a/Hippokampi.html
+++ b/Hippokampi.html
@@ -14687,7 +14687,7 @@ Google Form for hippokami email subscriptions to receive alerts<br>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1">#authorization</span>
-<span class="n">gc</span> <span class="o">=</span> <span class="n">pyg</span><span class="o">.</span><span class="n">authorize</span><span class="p">(</span><span class="n">service_file</span><span class="o">=</span><span class="s2">"Hippokampi-9c9209b112fe.json"</span><span class="p">)</span>
+<span class="n">gc</span> <span class="o">=</span> <span class="n">pyg</span><span class="o">.</span><span class="n">authorize</span><span class="p">(</span><span class="n">service_file</span><span class="o">=</span><span class="s2">"###.json"</span><span class="p">)</span>
 <span class="nb">print</span><span class="p">(</span><span class="n">gc</span><span class="p">)</span>
 </pre></div>
 
@@ -14720,7 +14720,7 @@ Google Form for hippokami email subscriptions to receive alerts<br>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1">#Open the google spreadsheet using Google doc ID key</span>
-<span class="n">sh</span> <span class="o">=</span> <span class="n">gc</span><span class="o">.</span><span class="n">open_by_key</span><span class="p">(</span><span class="s2">"1L-nHdwGdMgAP979kUtRvTtDD5UBXtMXGOtrh2xO5Dks"</span><span class="p">)</span>
+<span class="n">sh</span> <span class="o">=</span> <span class="n">gc</span><span class="o">.</span><span class="n">open_by_key</span><span class="p">(</span><span class="s2">"###"</span><span class="p">)</span>
 </pre></div>
 
     </div>
@@ -14842,7 +14842,7 @@ Google Form for hippokami email subscriptions to receive alerts<br>
     <tr>
       <th>0</th>
       <td>6/9/2019 22:11:14</td>
-      <td>sdcityjmcarter@gmail.com</td>
+      <td>sd##@gmail.com</td>
       <td>James</td>
       <td>Y</td>
       <td>Y</td>
@@ -14852,7 +14852,7 @@ Google Form for hippokami email subscriptions to receive alerts<br>
     <tr>
       <th>1</th>
       <td>6/9/2019 22:11:55</td>
-      <td>carter@post.harvard.edu</td>
+      <td>c##@post.harvard.edu</td>
       <td>JMCarter</td>
       <td>Y</td>
       <td>N</td>
@@ -14862,7 +14862,7 @@ Google Form for hippokami email subscriptions to receive alerts<br>
     <tr>
       <th>2</th>
       <td>7/2/2019 10:12:36</td>
-      <td>sdcitypanda@gmail.com</td>
+      <td>sd##@gmail.com</td>
       <td>Diego</td>
       <td>Y</td>
       <td>N</td>
