edited HTML formatting

--- a/HUDX111.html
+++ b/HUDX111.html
@@ -13123,16 +13123,16 @@ The purpose of this notebook is to create a dataframe to provide the County for 
 <li>3.1.1 City of San Diego will provide demographic information of individuals residing in three temporary bridge shelters to HHSA Office of Business Intelligence (OBI)</li>
 <li>3.1.2 City of San Diego will utilize data for internal use only and will not share data with unauthorized parties</li>
 <li>3.1.3 Each shelter has a different type of population and HHSA services will vary based on this. City of San Diego will collaborate with HHSA on data analysis and interpretation of these unique variables.
-&lt;/ul&gt;</li>
+</li>
+</ul>
 </ul>
 <p>3.2 HHSA Responsibilities<ul></p>
 <ul>
 <li>3.2.1 HHSA will utilize information provided by City of San Diego and create a non-identifying list of matches to any of HHSA services (see attachement A). The list will not show any identifying or confidential information. This list will show if an individual accessed HHSA service during the quarterly data period. (This list will not show whether person is eligible for services, declined services or currently accessing services).</li>
 <li>3.2.2 HHSA shall appoint OBI as the central HHSA coordinator for this effort</li>
 <li>3.2.3 HHSA will work with City of San Diego to help interpret data when it comes to unique circumstances for each bridge shelter
-&lt;/ul&gt;</li>
+</li>
 </ul>
-
 </div>
 </div>
 </div>
@@ -13156,8 +13156,8 @@ Disabilities.csv includes data for the following data elements:<ul></p>
 <p><li>4.9 MentalHealthProblem(DisabilityType8)</li></p>
 <p><li>4.10 SubstanceAbuse(DisabilityType10)</li></p>
 <p><li>W4T‐Cell(CD4)andViralLoad</li>
-&lt;/ul&gt;</p>
-<p>(source: HUD CSV specifications <a href="https://hudhdx.info/Resources/Vendors/5_1_2/HMISCSVSpecifications6_12.pdf"><a href="https://hudhdx.info/Resources/Vendors/5_1_2/HMISCSVSpecifications6_12.pdf">https://hudhdx.info/Resources/Vendors/5_1_2/HMISCSVSpecifications6_12.pdf</a>&lt;/ahref&gt;)</p>
+</ul></p>
+<p>(source: HUD CSV specifications <a href="https://hudhdx.info/Resources/Vendors/5_1_2/HMISCSVSpecifications6_12.pdf"><a href="https://hudhdx.info/Resources/Vendors/5_1_2/HMISCSVSpecifications6_12.pdf">https://hudhdx.info/Resources/Vendors/5_1_2/HMISCSVSpecifications6_12.pdf</a>)</p>
 
 </div>
 </div>
