--- a/Hippokampi.html
+++ b/Hippokampi.html
@@ -13150,6 +13150,7 @@ as a mechanism for relentless follow-up and data-based monitoring by a <a href="
 <span class="kn">import</span> <span class="nn">os</span>
 <span class="kn">import</span> <span class="nn">pygsheets</span> <span class="k">as</span> <span class="nn">pyg</span>
 <span class="kn">import</span> <span class="nn">datetime</span> <span class="k">as</span> <span class="nn">dt</span>
+<span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
 </pre></div>
 
     </div>
