--- a/notebooks.html
+++ b/notebooks.html
@@ -2,15 +2,15 @@
 <html lang="en-us">
 <body>
 <center>
-<a href = "Basic-HTML-Bio.html" alt=linkedin.com/in/jmc39><img src="black_octocat.jpg" alt="jmc39 seahorse dandelion" width=300></a>
-<a href = "https://www.linkedin.com/in/jmc39/" alt=linkedin.com/in/jmc39><img src="github.com.io logo.pptx.jpg" alt="jmc39 seahorse dandelion" width=400></a><br/>
+<a href = "Basic-HTML-Bio.html" alt=linkedin.com/in/jmc39><img src="black_octocat.jpg" alt="black octocat" width=300></a>
+<br/>
 </center>
 <li><a href="Hippokampi.html" alt='hippokampi sidewalks'>Hippokampi </a></li>
 <li><a href="GID39jmc.html" alt='data-based expectations'>GID SLA</a></li>
 <li><a href="RIPA.html" alt=ripa>RIPA</a></li>
 <li><a href="craigslistscraper.html" alt='craiglist beautifulsoup'>Affordable rental finder<a></li>
 <li><a href="HUDX111.html" alt='bridge shelter client disabilities'>Data prep: City-County client crossmatch<a></li>
-</li>
+<li><a href="pothole.html" alt=pothole>Pothole leaflet.js</a></li>
 
 </body>
 </html>
