--- a/pothole.html
+++ b/pothole.html
@@ -56,7 +56,7 @@
 <!-- leaflet.js pothole marker cluster map -->
 <div id="map"></div>
 <script type="text/javascript" src="static/js/config.js"></script>
-<script type="text/javascript" src="static/js/pothole_cluster.js"></script>
+<script type="text/javascript" src="static/js/pothole.js"></script>
 
 </body>
 </html>
