--- a/notebooks.html
+++ b/notebooks.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <body>
-<center>
-<a href = "Basic-HTML-Bio.html" alt=linkedin.com/in/jmc39><img src="black_octocat.jpg" alt="black octocat" width=300></a>
-<br/>
-</center>
-<li><a href="Hippokampi.html" alt='hippokampi sidewalks'>Hippokampi </a></li>
-<li><a href="GID39jmc.html" alt='data-based expectations'>GID SLA</a></li>
-<li><a href="RIPA.html" alt=ripa>RIPA</a></li>
-<li><a href="craigslistscraper.html" alt='craiglist beautifulsoup'>Affordable rental finder<a></li>
-<li><a href="HUDX111.html" alt='bridge shelter client disabilities'>Data prep: City-County client crossmatch<a></li>
-<li><a href="pothole.html" alt=pothole>Pothole leaflet.js</a></li>
+<table>
+<tr>  
+    <td align=center>
 
+        <a href = "Basic-HTML-Bio.html" alt=linkedin.com/in/jmc39><img src="black_octocat.jpg" alt="black octocat" width=300></a>
+    </td>
+    <td>
+        <br/>
+        <li><a href="Hippokampi.html" alt='hippokampi sidewalks'>Hippokampi Sidewalks</a></li>
+        <li><a href="GID39jmc.html" alt='data-based expectations'>GID SLA</a></li>
+        <li><a href="RIPA.html" alt=ripa>RIPA</a></li>
+        <li><a href="craigslistscraper.html" alt='craiglist beautifulsoup'>Affordable rental finder<a></li>
+        <li><a href="HUDX111.html" alt='bridge shelter client disabilities'>Data prep: City-County client crossmatch<a></li>
+        <li><a href="pothole.html" alt=pothole>Pothole leaflet.js</a></li>
+    </td>
+</tr>
+</table>
 </body>
 </html>
