updated pothole refernce to gidexplorer.netlify

--- a/notebooks.html
+++ b/notebooks.html
@@ -14,7 +14,7 @@
         <li><a href="RIPA.html" alt=ripa>RIPA</a></li>
         <li><a href="craigslistscraper.html" alt='craiglist beautifulsoup'>Affordable rental finder<a></li>
         <li><a href="HUDX111.html" alt='bridge shelter client disabilities'>Data prep: City-County client crossmatch<a></li>
-        <li><a href="pothole.html" alt=pothole>Pothole leaflet.js</a></li>
+        <li><a href="https://gidexplorer.netlify.com/" alt=pothole>Pothole leaflet.js</a></li>
     </td>
 </tr>
 </table>
