add URL to bootcamp LA restaurant ratings

--- a/notebooks.html
+++ b/notebooks.html
@@ -16,6 +16,7 @@
         <li><a href="HUDX111.html" alt='bridge shelter client disabilities'>Data prep: City-County client crossmatch<a></li>
         <li><a href="https://gidexplorer.netlify.com/" alt=pothole>Pothole leaflet.js</a></li>
         <li><a href="https://awws-group.github.io/Predicting-Respiratory-Disease-Mortality-From-Air-Quality-Analysis/" alt=AWWS>AWWS bootcamp project</a></li>
+        <li><a href="https://la-restaurant-ratings.herokuapp.com/" alt="d3.js leaflet LA la-restaurant-ratings">d3.js leaflet dashboard</a></li>
     </td>
 </tr>
 </table>
