--- a/notebooks.html
+++ b/notebooks.html
@@ -9,7 +9,7 @@
     </td>
     <td>
         <br/>
-        <li><a href="Hippokampi.html" alt='hippokampi sidewalks'>Hippokampi Sidewalks</a></li>
+        <li><a href="SONAR39.html" alt='SONAR'>SONAR alerting</a></li>
         <li><a href="GID39jmc.html" alt='data-based expectations'>GID SLA</a></li>
         <li><a href="RIPA.html" alt=ripa>RIPA</a></li>
         <li><a href="craigslistscraper.html" alt='craiglist beautifulsoup'>Affordable rental finder<a></li>
