upodate notebook to include COVID scraper

--- a/notebooks.html
+++ b/notebooks.html
@@ -12,6 +12,7 @@
         <li><a href="SONAR39.html" alt='SONAR'>SONAR alerting</a></li>
         <li><a href="GID39jmc.html" alt='data-based expectations'>GID SLA</a></li>
         <li><a href="RIPA.html" alt=ripa>RIPA</a></li>
+        <li><a href="rona_scraper.html" alt=RONA>COVID-19 scraper</a></li>
         <li><a href="craigslistscraper.html" alt='craiglist beautifulsoup'>Affordable rental finder<a></li>
         <li><a href="HUDX111.html" alt='bridge shelter client disabilities'>Data prep: City-County client crossmatch<a></li>
         <li><a href="https://gidexplorer.netlify.com/" alt=pothole>Pothole leaflet.js</a></li>
