--- a/rona_scraper.html
+++ b/rona_scraper.html
@@ -13115,7 +13115,7 @@ div#notebook {
 
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[133]:</div>
+<div class="prompt input_prompt">In&nbsp;[1]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Dependencies for scrapping</span>
@@ -13130,6 +13130,8 @@ div#notebook {
 <span class="kn">import</span> <span class="nn">datetime</span> <span class="k">as</span> <span class="nn">dt</span>
 <span class="kn">from</span> <span class="nn">datetime</span> <span class="k">import</span> <span class="n">datetime</span>
 <span class="kn">from</span> <span class="nn">twilio.rest</span> <span class="k">import</span> <span class="n">Client</span> <span class="c1">#!pip install twilio</span>
+
+<span class="n">googsheet</span> <span class="o">=</span> <span class="s2">&quot;XXXXXXXXX&quot;</span>
 </pre></div>
 
     </div>
@@ -13139,12 +13141,12 @@ div#notebook {
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[134]:</div>
+<div class="prompt input_prompt">In&nbsp;[2]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="k">def</span> <span class="nf">scrape_COSD_COVID</span><span class="p">():</span>
     <span class="c1"># Variable for Google sheet</span>
-    <span class="n">googsheet</span> <span class="o">=</span> <span class="s2">&quot;XXXXXXXX&quot;</span>
+<span class="c1">#     googsheet = &quot;XXXXXXX&quot;</span>
 
     <span class="c1"># Create list of URLs to bs4 scrape</span>
     <span class="n">rona</span> <span class="o">=</span> <span class="s2">&quot;https://www.sandiegocounty.gov/content/sdc/hhsa/programs/phs/community_epidemiology/dc/2019-nCoV/status.html&quot;</span>
@@ -13245,7 +13247,7 @@ div#notebook {
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[135]:</div>
+<div class="prompt input_prompt">In&nbsp;[3]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">scrape_COSD_COVID</span><span class="p">()</span>
@@ -13258,10 +13260,22 @@ div#notebook {
 <div class="output_wrapper">
 <div class="output">
 
-
+<!--
 <div class="output_area">
 
-    <div class="prompt output_prompt">Out[135]:</div>
+    <div class="prompt"></div>
+
+
+<div class="output_subarea output_stream output_stderr output_text">
+<pre>/Users/jamesmcarter/anaconda3/lib/python3.7/site-packages/pygsheets/worksheet.py:1254: FutureWarning: The pandas.np module is deprecated and will be removed from pandas in a future version. Import numpy directly instead
+  df = df.replace(pd.np.nan, nan)
+</pre>
+</div>
+</div>
+-->
+<div class="output_area">
+
+    <div class="prompt output_prompt">Out[3]:</div>
 
 
 
@@ -13278,7 +13292,7 @@ div#notebook {
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[239]:</div>
+<div class="prompt input_prompt">In&nbsp;[4]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1">## Scrape PDF via tabula for city-level data</span>
@@ -13346,12 +13360,12 @@ div#notebook {
 <div class="output_wrapper">
 <div class="output">
 
-<!--
+
 <div class="output_area">
 
     <div class="prompt"></div>
 
-
+<!--
 <div class="output_subarea output_stream output_stderr output_text">
 <pre>/Users/jamesmcarter/anaconda3/lib/python3.7/site-packages/pandas/core/frame.py:2963: SettingWithCopyWarning: 
 A value is trying to be set on a copy of a slice from a DataFrame.
@@ -13363,7 +13377,6 @@ See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stab
 </div>
 </div>
 -->
-
 <div class="output_area">
 
     <div class="prompt"></div>
@@ -13374,7 +13387,6 @@ See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stab
 </pre>
 </div>
 </div>
-
 <!--
 <div class="output_area">
 
@@ -13394,14 +13406,14 @@ See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stab
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>Successful build tabula history
+<pre>Successful build tabula gsheet history
 </pre>
 </div>
 </div>
 
 <div class="output_area">
 
-    <div class="prompt output_prompt">Out[239]:</div>
+    <div class="prompt output_prompt">Out[4]:</div>
 
 
 
@@ -13412,19 +13424,6 @@ See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stab
 
 </div>
 
-</div>
-</div>
-
-</div>
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
-<div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span> 
-</pre></div>
-
-    </div>
 </div>
 </div>
 
