--- a/rona_scraper.html
+++ b/rona_scraper.html
@@ -7,6 +7,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 
+
+
 <style type="text/css">
     /*!
 *
@@ -13118,7 +13120,7 @@ div#notebook {
 <br>
 <u><b>Approach:</b></u></p>
 <ul><li>Web scraper using <code>BeautifulSoup</code> to parse HTML table and <code>Tabula</code> package to scrape PDF of city stats;</li>
-<li>Dataframe endpoints push to a Google sheet using the <code>pygsheets</code> python package;</li>
+<li><a href="https://docs.google.com/spreadsheets/d/1BFe5q0WwVkEdbQm3pd0jMrPPC-FH4hICz4QJrfhnOkM/edit#gid=0" target="_blank">Dataframe endpoints push to a Google sheet</a> using the <code>pygsheets</code> python package;</li>
 <li>Scrape functions are subparts of AWS Lambda cron job to create "time-series" data through daily web scrape;</li>
 <li>Unfortunately, the data source web page changes formatting so the scraping is a moving target</li></ul><p><i>Date source: <a href="https://www.sandiegocounty.gov/content/sdc/hhsa/programs/phs/community_epidemiology/dc/2019-nCoV/status.html" target="_blank">San Diego County HHSA Public Health Services</a></i></p>
 
@@ -13143,7 +13145,7 @@ div#notebook {
 <span class="kn">from</span> <span class="nn">datetime</span> <span class="k">import</span> <span class="n">datetime</span>
 <span class="kn">from</span> <span class="nn">twilio.rest</span> <span class="k">import</span> <span class="n">Client</span> <span class="c1">#!pip install twilio</span>
 
-<span class="n">googsheet</span> <span class="o">=</span> <span class="s2">&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;</span>
+<span class="n">googsheet</span> <span class="o">=</span> <span class="s2">&quot;1BFe5q0WwVkEdbQm3pd0jMrPPC-FH4hICz4QJrfhnOkM&quot;</span>
 </pre></div>
 
     </div>
@@ -13158,7 +13160,7 @@ div#notebook {
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="k">def</span> <span class="nf">scrape_COSD_COVID</span><span class="p">():</span>
     <span class="c1"># Variable for Google sheet</span>
-<span class="c1">#     googsheet = &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;</span>
+<span class="c1">#     googsheet = &quot;1BFe5q0WwVkEdbQm3pd0jMrPPC-FH4hICz4QJrfhnOkM&quot;</span>
 
     <span class="c1"># Create list of URLs to bs4 scrape</span>
     <span class="n">rona</span> <span class="o">=</span> <span class="s2">&quot;https://www.sandiegocounty.gov/content/sdc/hhsa/programs/phs/community_epidemiology/dc/2019-nCoV/status.html&quot;</span>
@@ -13324,7 +13326,7 @@ div#notebook {
     <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;Created tabula dataframe&quot;</span><span class="p">)</span>
     <span class="k">def</span> <span class="nf">build_history</span><span class="p">(</span><span class="n">df</span><span class="p">):</span>
         <span class="c1">#Service_file authorization to access Google sheet</span>
-        <span class="n">gc</span> <span class="o">=</span> <span class="n">pyg</span><span class="o">.</span><span class="n">authorize</span><span class="p">(</span><span class="n">service_file</span><span class="o">=</span><span class="s2">&quot;../sdcityABCDEFGHIJKLMNOP.json&quot;</span><span class="p">)</span>
+        <span class="n">gc</span> <span class="o">=</span> <span class="n">pyg</span><span class="o">.</span><span class="n">authorize</span><span class="p">(</span><span class="n">service_file</span><span class="o">=</span><span class="s2">&quot;../sdcity9c9209b112fe.json&quot;</span><span class="p">)</span>
 
         <span class="c1">#Open the blank Google spreadsheet using Google doc ID key</span>
         <span class="n">pyg_rona</span> <span class="o">=</span> <span class="n">gc</span><span class="o">.</span><span class="n">open_by_key</span><span class="p">(</span><span class="n">googsheet</span><span class="p">)</span>
@@ -13368,7 +13370,7 @@ div#notebook {
 
     <div class="prompt"></div>
 
-<!--
+
 <div class="output_subarea output_stream output_stderr output_text">
 <pre>/Users/jamesmcarter/anaconda3/lib/python3.7/site-packages/pandas/core/frame.py:2963: SettingWithCopyWarning: 
 A value is trying to be set on a copy of a slice from a DataFrame.
@@ -13378,7 +13380,6 @@ See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stab
   self[k1] = value[k2]
 </pre>
 </div>
--->
 </div>
 
 <div class="output_area">
@@ -13397,8 +13398,125 @@ Successful build tabula gsheet history
 
     <div class="prompt output_prompt">Out[4]:</div>
 
+
+
+
 <div class="output_text output_subarea output_execute_result">
 <pre>&#39;Successful scraped PDF url to Google sheet endpoints&#39;</pre>
+</div>
+
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[5]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="c1">## Scrape PDF via tabula for zip code-level data</span>
+<span class="k">def</span> <span class="nf">scrape_ZIP_COSD</span><span class="p">():</span>
+    <span class="n">pdf_path</span> <span class="o">=</span> <span class="s2">&quot;https://www.sandiegocounty.gov/content/dam/sdc/hhsa/programs/phs/Epidemiology/COVID-19%20Summary</span><span class="si">%20o</span><span class="s2">f%20Cases%20by%20Zip%20Code.pdf&quot;</span>
+    <span class="n">zip_COVID</span> <span class="o">=</span> <span class="n">tabula</span><span class="o">.</span><span class="n">read_pdf</span><span class="p">(</span><span class="n">pdf_path</span><span class="p">)</span>
+    <span class="n">zip_COVID</span><span class="o">.</span><span class="n">head</span><span class="p">(</span><span class="mi">5</span><span class="p">)</span>
+
+    <span class="n">df1</span> <span class="o">=</span> <span class="n">zip_COVID</span><span class="p">[[</span><span class="s2">&quot;Zip Code&quot;</span><span class="p">,</span> <span class="s2">&quot;Case Count&quot;</span><span class="p">]]</span>
+    <span class="n">df2</span> <span class="o">=</span> <span class="n">zip_COVID</span><span class="p">[[</span><span class="s1">&#39;Zip Code.1&#39;</span><span class="p">,</span><span class="s1">&#39;Case Count.1&#39;</span><span class="p">]]</span>
+    <span class="n">df2</span><span class="o">.</span><span class="n">rename</span><span class="p">(</span><span class="n">columns</span><span class="o">=</span><span class="p">{</span><span class="s2">&quot;Zip Code.1&quot;</span><span class="p">:</span><span class="s2">&quot;Zip Code&quot;</span><span class="p">,</span><span class="s2">&quot;Case Count.1&quot;</span><span class="p">:</span><span class="s2">&quot;Case Count&quot;</span><span class="p">},</span> <span class="n">inplace</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
+    <span class="n">df</span> <span class="o">=</span> <span class="n">df1</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">df2</span><span class="p">,</span> <span class="n">ignore_index</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
+    <span class="sd">&quot;&quot;&quot;len(df1)</span>
+<span class="sd">    len(df2)</span>
+<span class="sd">    len(df)</span>
+<span class="sd">    df.head(2)</span>
+<span class="sd">    df.tail(2)</span>
+<span class="sd">    &quot;&quot;&quot;</span>
+    <span class="c1"># Adding timestamp column to the dataframe. </span>
+    <span class="n">df</span><span class="p">[</span><span class="s1">&#39;Timestamp&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="n">dt</span><span class="o">.</span><span class="n">datetime</span><span class="o">.</span><span class="n">now</span><span class="p">()</span>
+    <span class="n">df</span> <span class="o">=</span> <span class="n">df</span><span class="p">[[</span><span class="s2">&quot;Timestamp&quot;</span><span class="p">,</span><span class="s2">&quot;Zip Code&quot;</span><span class="p">,</span><span class="s2">&quot;Case Count&quot;</span><span class="p">]]</span>
+    <span class="n">zip_df</span> <span class="o">=</span> <span class="n">df</span>
+    <span class="n">zip_df</span><span class="o">.</span><span class="n">tail</span><span class="p">(</span><span class="mi">6</span><span class="p">)</span>
+    <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;Created tabula dataframe&quot;</span><span class="p">)</span>
+
+    <span class="k">def</span> <span class="nf">build_history</span><span class="p">(</span><span class="n">df</span><span class="p">):</span>
+        <span class="c1">#Service_file authorization to access Google sheet</span>
+        <span class="n">gc</span> <span class="o">=</span> <span class="n">pyg</span><span class="o">.</span><span class="n">authorize</span><span class="p">(</span><span class="n">service_file</span><span class="o">=</span><span class="s2">&quot;../sdcity9c9209b112fe.json&quot;</span><span class="p">)</span>
+
+        <span class="c1">#Open the blank Google spreadsheet using Google doc ID key</span>
+        <span class="n">pyg_rona</span> <span class="o">=</span> <span class="n">gc</span><span class="o">.</span><span class="n">open_by_key</span><span class="p">(</span><span class="n">googsheet</span><span class="p">)</span>
+
+        <span class="c1"># Retrieve Google Sheet containing historicals</span>
+        <span class="n">wks_zip</span> <span class="o">=</span> <span class="n">pyg_rona</span><span class="p">[</span><span class="mi">2</span><span class="p">]</span>
+
+        <span class="c1">#READ - also get the values of sheet as dataframe</span>
+        <span class="n">df_history</span> <span class="o">=</span> <span class="n">wks_zip</span><span class="o">.</span><span class="n">get_as_df</span><span class="p">(</span><span class="n">start</span><span class="o">=</span><span class="p">(</span><span class="mi">1</span><span class="p">,</span><span class="mi">1</span><span class="p">))</span>
+
+        <span class="n">cols_to_retrieve</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;Timestamp&#39;</span><span class="p">,</span><span class="s1">&#39;Zip Code&#39;</span><span class="p">,</span><span class="s1">&#39;Case Count&#39;</span><span class="p">]</span>
+        <span class="n">df_history</span> <span class="o">=</span> <span class="n">df_history</span><span class="p">[</span><span class="n">cols_to_retrieve</span><span class="p">]</span>
+
+        <span class="n">zip_df</span> <span class="o">=</span> <span class="n">df</span><span class="p">[</span><span class="n">cols_to_retrieve</span><span class="p">]</span>
+
+        <span class="c1"># Append most recently updated to historicals</span>
+        <span class="n">df_history</span> <span class="o">=</span> <span class="n">df_history</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">zip_df</span><span class="p">,</span> <span class="n">ignore_index</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">sort</span><span class="o">=</span><span class="kc">False</span><span class="p">)</span>
+
+        <span class="c1"># dF_historicals.drop([index],inplace=True)</span>
+        <span class="n">df_history</span>
+
+        <span class="c1">#CREATE - set the values of a pandas dataframe to sheet</span>
+        <span class="n">wks_rona_zip</span> <span class="o">=</span>  <span class="n">pyg_rona</span><span class="p">[</span><span class="mi">2</span><span class="p">]</span>
+        <span class="n">wks_rona_zip</span><span class="o">.</span><span class="n">set_dataframe</span><span class="p">(</span><span class="n">df_history</span><span class="p">,(</span><span class="mi">1</span><span class="p">,</span><span class="mi">1</span><span class="p">))</span>
+        <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;Successful build tabula gsheet ZIP history&quot;</span><span class="p">)</span>
+        <span class="k">return</span> <span class="s2">&quot;Successful build tabula gsheet ZIP history&quot;</span>
+    <span class="n">build_history</span><span class="p">(</span><span class="n">zip_df</span><span class="p">)</span>
+    <span class="k">return</span> <span class="s2">&quot;Successful scraped ZIP PDF url to Google sheet endpoints&quot;</span>
+<span class="n">scrape_ZIP_COSD</span><span class="p">()</span>
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+
+    <div class="prompt"></div>
+
+
+<div class="output_subarea output_stream output_stderr output_text">
+<pre>/Users/jamesmcarter/anaconda3/lib/python3.7/site-packages/pandas/core/frame.py:4133: SettingWithCopyWarning: 
+A value is trying to be set on a copy of a slice from a DataFrame
+
+See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy
+  errors=errors,
+</pre>
+</div>
+</div>
+
+<div class="output_area">
+
+    <div class="prompt"></div>
+
+
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>Created tabula dataframe
+Successful build tabula gsheet ZIP history
+</pre>
+</div>
+</div>
+
+<div class="output_area">
+
+    <div class="prompt output_prompt">Out[5]:</div>
+
+
+
+
+<div class="output_text output_subarea output_execute_result">
+<pre>&#39;Successful scraped ZIP PDF url to Google sheet endpoints&#39;</pre>
 </div>
 
 </div>
@@ -13410,5 +13528,8 @@ Successful build tabula gsheet history
     </div>
   </div>
 </body>
+
+ 
+
 
 </html>
