delete googsheet document ID

--- a/SONAR39.html
+++ b/SONAR39.html
@@ -13133,7 +13133,7 @@ in existing DAGs.</p>
 <p>From a performance management perspective, SONAR serves as a mechanism to enhance access to actionable performance
 data. Continuous analysis of these data provide the basis for relentless follow-up and data-based monitoring 
 in a <a href="https://drive.google.com/file/d/1kSNKUoBZ5Z21jMDHCIwXMpNx5Iju9Tp4/view?usp=sharing" target="_blank">PerformanceSTAT</a> program.</p>
-<p><a href="https://docs.google.com/spreadsheets/d/1CPYX-UymX0qsgBoQ-SctevTYlOiBUJIhooN--uPbxvM">End points in Google sheet.</a>
+<p><a href="https://docs.google.com/spreadsheets/">End points in Google sheet.</a>
 <br>
 <a href="https://public.tableau.com/profile/performsd#!/vizhome/sidewalk_backlog/backlog_story">Data visualization and map</a></p>
 
