--- a/craigslistscraper.html
+++ b/craigslistscraper.html
@@ -13119,7 +13119,7 @@ div#notebook {
 <p><H3>Craiglists Scraper and SDHC Choice Communities Voucher Initiative</H3>
 <a href="https://public.tableau.com/profile/performsd#!/vizhome/scraper/listings?">ipynb Map and data visualization</a>
 <br>
-<a href="https://docs.google.com/spreadsheets/d/1bFk_kgHKn8rzrFoP00ROfdHZERzQWWcimhpeJE5POaA/">Google sheet end points</a>
+<a href="https://docs.google.com/spreadsheets">Google sheet end points</a>
 <br>
 <br>
 The purpose of this notebook is to:<ol>
