commented out bootcamp bio.html

--- a/notebooks.html
+++ b/notebooks.html
@@ -5,7 +5,7 @@
 <tr>  
     <td align=center>
 
-        <a href = "Basic-HTML-Bio.html" alt=linkedin.com/in/jmc39><img src="black_octocat.jpg" alt="black octocat" width=300></a>
+        <!-- <a href = "Basic-HTML-Bio.html" alt=linkedin.com/in/jmc39><img src="black_octocat.jpg" alt="black octocat" width=300></a> -->
     </td>
     <td>
         <br/>
