--- a/notebooks.html
+++ b/notebooks.html
@@ -6,6 +6,8 @@
     <td align=center>
 
         <!-- <a href = "Basic-HTML-Bio.html" alt=linkedin.com/in/jmc39><img src="black_octocat.jpg" alt="black octocat" width=300></a> -->
+
+        <img src="black_octocat.jpg" alt="black octocat" width=300>
     </td>
     <td>
         <br/>
