--- a/rona_scraper.html
+++ b/rona_scraper.html
@@ -13133,7 +13133,7 @@ div#notebook {
 <br>
 <u><b>Approach:</b></u></p>
 <ul><li>Web scraper using <code>BeautifulSoup</code> to parse HTML table and <code>Tabula</code> package to scrape PDFs: city stats, zip codes, hospitalizations;</li>
-<li><a href="https://docs.google.com/spreadsheets/d/1BFe5q0WwVkEdbQm3pd0jMrPPC-FH4hICz4QJrfhnOkM/edit#gid=0" target="_blank">Dataframe endpoints push to a Google sheet</a> using the <code>pygsheets</code> python package;</li>
+<li><a href="https://docs.google.com/spreadsheets" target="_blank">Dataframe endpoints push to a Google sheet</a> using the <code>pygsheets</code> python package;</li>
 <li>Scrape functions are subparts of AWS Lambda cron job to create "time-series" data through daily web scrape;</li>
 <li>Unfortunately, the data source web page changes formatting so the scraping is a moving target</li></ul><p><i>Date source: <a href="https://www.sandiegocounty.gov/content/sdc/hhsa/programs/phs/community_epidemiology/dc/2019-nCoV/status.html" target="_blank">San Diego County HHSA Public Health Services</a></i></p>
 
@@ -13158,7 +13158,7 @@ div#notebook {
 <span class="kn">from</span> <span class="nn">datetime</span> <span class="k">import</span> <span class="n">datetime</span>
 <span class="kn">from</span> <span class="nn">datetime</span> <span class="k">import</span> <span class="n">timedelta</span>
 <span class="kn">import</span> <span class="nn">tabula</span>
-<span class="n">googsheet</span> <span class="o">=</span> <span class="s2">&quot;1BFe5q0WwVkEdbQm3pd0jMrPPC-FH4hICz4QJrfhnOkM&quot;</span>
+<span class="n">googsheet</span> <span class="o">=</span> <span class="s2">&quot;googlesheet&quot;</span>
 </pre></div>
 
     </div>
@@ -13173,7 +13173,7 @@ div#notebook {
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="k">def</span> <span class="nf">scrape_COSD_COVID</span><span class="p">():</span>
     <span class="c1"># Variable for Google sheet</span>
-    <span class="n">googsheet</span> <span class="o">=</span> <span class="s2">&quot;1BFe5q0WwVkEdbQm3pd0jMrPPC-FH4hICz4QJrfhnOkM&quot;</span>
+    <span class="n">googsheet</span> <span class="o">=</span> <span class="s2">&quot;googlesheet&quot;</span>
 
     <span class="c1"># Create list of URLs to bs4 scrape</span>
     <span class="n">rona</span> <span class="o">=</span> <span class="s2">&quot;https://www.sandiegocounty.gov/content/sdc/hhsa/programs/phs/community_epidemiology/dc/2019-nCoV/status.html&quot;</span>
