block out Google doc IDs

--- a/rona_scraper.html
+++ b/rona_scraper.html
@@ -13133,7 +13133,7 @@ div#notebook {
 <br>
 <u><b>Approach:</b></u></p>
 <ul><li>Web scraper using <code>BeautifulSoup</code> to parse HTML table and <code>Tabula</code> package to scrape PDFs: city stats, zip codes, hospitalizations;</li>
-<li><a href="https://docs.google.com/spreadsheets/d/1BFe5q0WwVkEdbQm3pd0jMrPPC-FH4hICz4QJrfhnOkM/edit#gid=0" target="_blank">Dataframe endpoints push to a Google sheet</a> using the <code>pygsheets</code> python package;</li>
+<li><a href="https://docs.google.com/spreadsheets/d/{ } } }edit#gid=0" target="_blank">Dataframe endpoints push to a Google sheet</a> using the <code>pygsheets</code> python package;</li>
 <li>Scrape functions are subparts of AWS Lambda cron job to create "time-series" data through daily web scrape;</li>
 <li>Unfortunately, the data source web page changes formatting so the scraping is a moving target</li></ul><p><i>Date source: <a href="https://www.sandiegocounty.gov/content/sdc/hhsa/programs/phs/community_epidemiology/dc/2019-nCoV/status.html" target="_blank">San Diego County HHSA Public Health Services</a></i></p>
 
@@ -13162,7 +13162,7 @@ div#notebook {
 <span class="kn">import</span> <span class="nn">warnings</span>
 <span class="n">warnings</span><span class="o">.</span><span class="n">filterwarnings</span><span class="p">(</span><span class="n">action</span><span class="o">=</span><span class="s1">&#39;ignore&#39;</span><span class="p">)</span>
 
-<span class="n">googsheet</span> <span class="o">=</span> <span class="s2">&quot;1BFe5q0WwVkEdbQm3pd0jMrPPC-FH4hICz4QJrfhnOkM&quot;</span>
+<span class="n">googsheet</span> <span class="o">=</span> <span class="s2">&quot;1BFe5q0WwVkEdbQm{ } } X X}FH4hICz4QJrfhnOkM&quot;</span>
 </pre></div>
 
     </div>
