block out API keys

--- a/craigslistscraper.html
+++ b/craigslistscraper.html
@@ -14156,7 +14156,7 @@ dtype: object</pre>
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1">#CREATE Google Sheet from dataframes to create endpoints for visualization</span>
 
 <span class="c1">#authorization</span>
-<span class="n">gc</span> <span class="o">=</span> <span class="n">pyg</span><span class="o">.</span><span class="n">authorize</span><span class="p">(</span><span class="n">service_file</span><span class="o">=</span><span class="s2">&quot;../requirements/sdcity9c9209b112fe.json&quot;</span><span class="p">)</span>
+<span class="n">gc</span> <span class="o">=</span> <span class="n">pyg</span><span class="o">.</span><span class="n">authorize</span><span class="p">(</span><span class="n">service_file</span><span class="o">=</span><span class="s2">&quot;../requirements/sdcity{ } } }.json&quot;</span><span class="p">)</span>
 <span class="nb">print</span><span class="p">(</span><span class="n">gc</span><span class="p">)</span>
 </pre></div>
 
@@ -15082,7 +15082,7 @@ dtype: object</pre>
 <li>https://towardsdatascience.com/in-10-minutes-web-scraping-with-beautiful-soup-and-selenium-for-data-professionals-8de169d36319</li>
 <li>https://stackoverflow.com/questions/52140611/scraping-multiple-pages-with-python</li>
 <li>https://towardsdatascience.com/web-scraping-craigslist-a-complete-tutorial-c41cea4f4981</li>
-<li>https://towardsdatascience.com/geopandas-101-plot-any-data-with-a-latitude-and-longitude-on-a-map-98e01944b972</li><h3 id="ipynb-visual-output-from-GSheet">ipynb visual output from GSheet<a class="anchor-link" href="#ipynb-visual-output-from-GSheet">&#182;</a></h3><p><li><a href="https://public.tableau.com/profile/performsd#!/vizhome/scraper/listings?">Tableau data visualization&lt;/A&gt;</p>
+<li>https://towardsdatascience.com/geopandas-101-plot-any-data-with-a-latitude-and-longitude-on-a-map-98e01944b972</li><h3 id="ipynb-visual-output-from-GSheet">ipynb visual output from GSheet<a class="anchor-link" href="#ipynb-visual-output-from-GSheet">&#182;</a></h3><p><li><a href="https://public.tableau.com/profile/performsd#!/vizhome/scraper/listings?">Tableau data visualization</a></p>
 
 </div>
 </div>
