updated to SONAR code rmv google sheet ID

--- a/SONAR39.html
+++ b/SONAR39.html
@@ -13288,14 +13288,14 @@ in a <a href="https://drive.google.com/file/d/1kSNKUoBZ5Z21jMDHCIwXMpNx5Iju9Tp4/
 <div class="prompt input_prompt">In&nbsp;[8]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Google sheet API document IDs</span>
-<span class="n">sheet1</span> <span class="o">=</span><span class="s1">&#39;16MZhwrQbLG3FSI2Ac020pH4aWI_ZtHJfS7kC9dq1WnI&#39;</span> <span class="c1">#Missed Collections</span>
-<span class="n">sheet2</span> <span class="o">=</span> <span class="s1">&#39;1hK_u1mqriQlQ1ihQkJAyGTMseGPqPnj_GvE39pZ8mNs&#39;</span> <span class="c1">#Potential Missed Collection {NO LONGER EXISTS 7/2021}</span>
-<span class="n">sheet3</span> <span class="o">=</span> <span class="s1">&#39;1gswHbjm_7yqUkdI0aE2pu3JWirzN1iae1qhAuAPCBi8&#39;</span> <span class="c1">#Illegal Dumping</span>
-<span class="n">sheet4</span> <span class="o">=</span><span class="s1">&#39;1QkxMjUA9VrfnuZ6V2tOF-jLX6C-WQGTjalGQiSAG3z4&#39;</span> <span class="c1">#Dead Animal</span>
-<span class="n">sheet5</span> <span class="o">=</span> <span class="s1">&#39;1-MZGqZxVruoxb2gJvbMBy7cDY7qSZrPqe-QKAxfDLis&#39;</span> <span class="c1">#Homeless Encampment</span>
-<span class="n">sheet6</span> <span class="o">=</span> <span class="s1">&#39;1CPYX-UymX0qsgBoQ-SctevTYlOiBUJIhooN--uPbxvM&#39;</span> <span class="c1">#Sidewalk Repair Issue</span>
-<span class="n">sheet7</span> <span class="o">=</span> <span class="s1">&#39;1ig4m5uczMKFGGJ8JhDwrkNc6uMytKfMS6o6Zgh2YgFo&#39;</span> <span class="c1">#Graffiti Removal</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Google shee</span>
+<span class="c1"># sheet1 Missed Collections</span>
+<span class="c1"># sheet2 Potential Missed Collection {NO LONGER EXISTS 7/2021}</span>
+<span class="c1"># sheet3 Illegal Dumping</span>
+<span class="c1"># sheet4 Dead Animal</span>
+<span class="c1"># sheet5 Homeless Encampment</span>
+<span class="c1"># sheet6 Sidewalk Repair Issue</span>
+<span class="c1"># sheet7 Graffiti Removal</span>
 </pre></div>
 
     </div>
