latest SONAR script

--- a/SONAR39.html
+++ b/SONAR39.html
@@ -13288,7 +13288,7 @@ in a <a href="https://drive.google.com/file/d/1kSNKUoBZ5Z21jMDHCIwXMpNx5Iju9Tp4/
 <div class="prompt input_prompt">In&nbsp;[8]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Google shee</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Google sheets service category assignments</span>
 <span class="c1"># sheet1 Missed Collections</span>
 <span class="c1"># sheet2 Potential Missed Collection {NO LONGER EXISTS 7/2021}</span>
 <span class="c1"># sheet3 Illegal Dumping</span>
